# amplifier-app-benchmarks

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: regression.yaml
agents/amplifier_next_default/: agent.yaml  command_template.txt  install.dockerfile
custom_tasks_example/system_info_utility/: instructions.txt  setup.dockerfile  task.yaml  test.py
data/agents/amplifier_for_claude/: agent.yaml
data/agents/amplifier_foundation/: agent.yaml
data/agents/amplifier_foundation/data/.amplifier/: settings.local.yaml
data/agents/amplifier_foundation_gemini/: agent.yaml  command_template.txt
data/agents/amplifier_foundation_gemini/data/.amplifier/: settings.local.yaml
data/agents/amplifier_foundation_openai/: agent.yaml
data/agents/amplifier_foundation_openai/data/.amplifier/: settings.local.yaml
data/agents/amplifier_smoke_test_bundle/: agent.yaml  command_template.txt  install.dockerfile
data/agents/amplifier_smoke_test_bundle/data/test-bundle/: bundle.md
data/agents/claude_code/: agent.yaml
data/benchmarks/: full.yaml  regression.yaml  sample.yaml
data/eval-setups/: sample.yaml
data/run-configs/: full.yaml  regression.yaml  sample.yaml
data/tasks/amplifier_agent_delegation/: instructions.txt  task.yaml  test.py
data/tasks/amplifier_agents_md_injection/: instructions.txt  test.py
data/tasks/amplifier_bash_execution/: instructions.txt  setup.dockerfile  task.yaml  test.py
data/tasks/amplifier_bundle_context/: instructions.txt  test.py
data/tasks/amplifier_pdf_extraction/: instructions.txt  task.yaml  test.py
data/tasks/amplifier_provider_responds/: instructions.txt  test.py
data/tasks/amplifier_recipe_list/: instructions.txt  test.py
data/tasks/amplifier_tool_execution/: instructions.txt  test.py
data/tasks/amplifier_web_fetch/: instructions.txt  test.py
data/tasks/amplifier_web_search/: instructions.txt  test.py
data/tasks/comparisons/annual-report/: task.yaml
data/tasks/comparisons/annual-report/task_time_data/: broken_sharepoint_link_backup.txt  goals_for_2026_draft.docx  last_year_annual_report_section.docx  office_march_madness_results.xlsx
data/tasks/comparisons/board-meeting/: task.yaml
data/tasks/comparisons/board-meeting/task_time_data/: board_dinner_restaurant_options.pdf.txt  board_member_bios.txt  office_building_security_badges.xlsx  parking_validation_instructions.txt  risk_register_current.xlsx
data/tasks/comparisons/budget-request/: task.yaml
data/tasks/comparisons/budget-request/task_time_data/: department_goals_2026.docx  office_furniture_wishlist.xlsx  random_expense_report_november.md  recruiter_spam_email.txt
data/tasks/comparisons/calendar-scheduling/: task.yaml
data/tasks/comparisons/calendar-scheduling/task_time_data/: ea_vacation_schedule.xlsx  previous_offsite_scheduling_nightmare.txt
data/tasks/comparisons/campaign-recap/: task.yaml
data/tasks/comparisons/campaign-recap/task_time_data/: march_madness_office_pool.xlsx  marketing_team_ooo_calendar.txt  swag_inventory_leftover.csv
data/tasks/comparisons/case-study/: task.yaml
data/tasks/comparisons/case-study/task_time_data/: marketing_swag_request_healthfirst.txt
data/tasks/comparisons/contact-consolidation/: task.yaml
data/tasks/comparisons/contact-consolidation/task_time_data/: networking_event_random_notes.txt  team_contact_list_work.xlsx
data/tasks/comparisons/contract-redlines/: task.yaml
data/tasks/comparisons/contract-redlines/task_time_data/: contract_template_blank.docx  legal_team_ooo_calendar.txt
data/tasks/comparisons/data-deduplication/: task.yaml
data/tasks/comparisons/directory-update/: task.yaml
data/tasks/comparisons/expense-reconciliation/: task.yaml
data/tasks/comparisons/invoice-matching/: task.yaml
data/tasks/comparisons/meeting-notes/: task.yaml
data/tasks/comparisons/meeting-notes/task_time_data/: attendee_list.txt  (+10 more)
data/tasks/comparisons/onboarding-deck/: task.yaml
data/tasks/comparisons/ppt-4/: task.yaml
data/tasks/comparisons/qbr-deck/: task.yaml
data/tasks/comparisons/survey-analysis/: task.yaml
data/tasks/comparisons/training-curriculum/: task.yaml
data/tasks/comparisons/travel-itinerary/: task.yaml
data/tasks/comparisons/vendor-evaluation/: task.yaml
data/tasks/regression/amplifier_agent_delegation/: task.yaml  test.py
data/tasks/regression/amplifier_agents_md_injection/: task.yaml  test.py
data/tasks/regression/amplifier_bash_execution/: task.yaml  test.py
data/tasks/regression/amplifier_bundle_context/: task.yaml  test.py
data/tasks/regression/amplifier_pdf_extraction/: task.yaml  test.py
data/tasks/regression/amplifier_provider_responds/: task.yaml  test.py
data/tasks/regression/amplifier_recipe_list/: task.yaml  test.py
data/tasks/regression/amplifier_web_fetch/: task.yaml  test.py
data/tasks/regression/amplifier_web_search/: task.yaml  test.py
data/tasks/system_info_utility/: test.py
docs/: CREATE_BENCHMARK_TASK.md  CREATE_SEMANTIC_TEST.md  DEVELOPMENT.md
src/amplifier_app_benchmarks/: __init__.py  __main__.py  cli.py
src/amplifier_app_benchmarks/harbor/: __init__.py  amplifier_agent.py  amplifier_install.sh  cli.py  runner.py
(+261 files in other folders)
