[project]
name = "amplifier-app-benchmarks"
version = "0.2.0"
description = "Benchmarking tool for Amplifier using eval-recipes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation"}
]
keywords = ["benchmarking", "amplifier", "eval", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "eval_recipes @ git+https://github.com/microsoft/eval-recipes@v0.0.15",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.scripts]
run_benchmarks = "amplifier_app_benchmarks.cli:main"

[project.urls]
Homepage = "https://github.com/DavidKoleczek/amplifier-app-benchmarks"
Repository = "https://github.com/DavidKoleczek/amplifier-app-benchmarks"
Issues = "https://github.com/DavidKoleczek/amplifier-app-benchmarks/issues"

[tool.uv.sources]
eval_recipes = {git = "https://github.com/microsoft/eval-recipes", tag = "v0.0.15"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_benchmarks"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
