[project]
name = "amplifier-app-benchmarks"
version = "0.1.0"
description = "Testing and Benchmarking Amplifier at scale"
readme = "README.md"
authors = [
    { name = "David Koleczek", email = "45405824+DavidKoleczek@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3,<9.0",
    "eval-recipes @ git+https://github.com/microsoft/eval-recipes@v0.0.29",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.12",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie

    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line-too-long (formatter makes best-effort attempt)
    # The following rules conflict with the formatter, see: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC002", # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


